--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^1.1.0",
+    "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.2",
     "gulp-rev-append": "^0.1.6",
     "gulp-rev-replace": "^0.4.3",
@@ -32,7 +33,7 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^1.1.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
     "jshint": "^2.9.3",
     "jshint-stylish": "^2.2.1",
