--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
+    "gulp-util": "^3.0.7",
     "jshint": "^2.9.3",
     "jshint-stylish": "^2.2.1",
     "main-bower-files": "^2.13.1",
